--- a/beauty-equipment-client/package.json
+++ b/beauty-equipment-client/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-read-more-read-less": "^1.0.7",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.1.5",
     "web-vitals": "^2.1.4"
